@startuml

entity Exercise {
*ExerciseID<<generated>>
--
*ExerciseName: text
*Sets: integer
*Reps: integer
*Weight: float
*RestTime: float
*MuscleType: text
}

entity Users{
*userID<<generated>>
--
*username: text
*password: text
*sex: text
*age: integer
*height: integer
*weight: float
*WorkoutProgram1<<FK>>
*WorkoutProgram2<<FK>>
*WorkoutProgram3<<FK>>
}

entity WorkoutProgramExercises{
*WorkoutProgramID<<FK>>
--
*Exercise1<<FK>>
*Exercise2<<FK>>
*Exercise3<<FK>>
*Exercise4<<FK>>
*Exercise5<<FK>>
}

entity WorkoutProgram{
*WorkoutID<<generated>>
--
*WorkoutName:text
*Exercise1<<FK>>
*Exercise2<<FK>>
*Exercise3<<FK>>
*Exercise4<<FK>>
*Exercise5<<FK>>
}


Users ||..|{ WorkoutProgram
WorkoutProgramExercises ||..|{ Exercise
WorkoutProgram }|..|| WorkoutProgramExercises
@enduml